# rusty-logger

./: .gitignore  .tool-versions  CONTRIBUTING.md  Cargo.toml  LICENSE.md  Makefile  README.md  Readme.md  SECURITY.md  codecov.yml  pyproject.toml  release-plz.toml  results.xml
.github/: CODEOWNERS  reviewer_config.yml
.github/ISSUE_TEMPLATE/: bug_report_python.yml  config.yml  documentation.yml  feature_request.yml
.github/workflows/: CI.yml  auto-assign.yml  lint-rust.yml  lint-testing.yml  release-candidate.yml  release.yml
crates/rusty_logger/: Cargo.toml
crates/rusty_logger/src/: error.rs  lib.rs  logger.rs
examples/: base_timer.py  file_logger.py  json.py  json_logger.py  json_timer.py  logger.py  timer.py
examples/api/: healthcheck.py  logger.py  main.py  readme.md  router.py  routes.py  server.sh
examples/mod/: bar.py  custom_logger.py  foo.py  main.py
log/: test.log.2023-09-15-00
logs/: test.log.2023-09-11-14
py-logger/: Cargo.toml  README.md  makefile  pyproject.toml
py-logger/python/rusty_logger/: __init__.py  rusty_logger.pyi  version.py
py-logger/src/: lib.rs
py-logger/tests/: test_logger.py
python/rusty_logger/: __init__.py  _rusty_logger.pyi  logger.py
rusty_logger/: __init__.py  __init__.pyi  logger.py  logger.pyi  version.py
src/: lib.rs
src/logger/: logger.rs  mod.rs  pylogger.rs  rust_logger.rs
tests/: _test_scratch.py  conftest.py  mod_one.py  mod_two.py  requirements.txt  standard_logger.py  test_logger.py
