[package]
name = "rusty-logger"
version = "0.1.0-rc.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "_rusty_logger"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = "0.19.0"
tracing = "0.1.37"
tracing-appender = "0.2.2"
tracing-subscriber = {version = "0.3.17", features = ["json", "time"]}
serde = { version = "1.0.163", features = ["derive"] }
tracing-core = "0.1.31"
serde_json = "1.0.107"
time = "0.3.28"
owo-colors = "3.5.0"

[profile.release]
lto = "fat"
codegen-units = 1
strip = true
