[workspace]
resolver = "2"
members = [
  "crates/*",
  "py-logger",
]
default-members = [
  "crates/*",
]

[workspace.package]
version = "0.5.0"
authors = ["Steven Forrester <sjforrester32@gmail.com>"]
edition = "2021"
license = "MIT"
repository = "https://github.com/demml/opsml"

[workspace.dependencies]
rusty-logging = { path = "crates/rusty_logger" }
dynfmt = { version = "0.*", features = ["curly"] }
owo-colors = "4.*"
pyo3 = { version = "0.*", features = ["extension-module", "anyhow", "serde", "chrono"] }
serde = { version = "1.*", features = ["derive"] }
serde_json = "1.*"
thiserror = "2.*"
time = "0.*"
tracing = "0.*"
tracing-appender = "0.*"
tracing-core = "0.*"
tracing-subscriber = {version = "0.*", features = ["json", "time"]}

[profile.release]
lto = "fat"
codegen-units = 1
strip = true
opt-level = 3

[profile.release-no-lto]
inherits = "release"
lto = false

