[tool.poetry]
name = "rusty-logger"
version = "0.3.1"
description = "Rust-based python logger"
readme = "README.md"
authors = ["Thorrester <48217609+thorrester@users.noreply.github.com>"]

[tool.poetry.dependencies]
# required dependencies
python = ">=3.8,<3.13"
smokeshow = "^0.4.0"


[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.2"
pytest-cov = "^3.0.0"
ruff = "^0.1.0"
mypy = "^1"
black = "24.3.0"
pylint = "^2.17.5"
python-json-logger = "^2.0.7"
fastapi = "^0.109.2"
uvicorn = "^0.23"
gunicorn = "^21"

[tool.ruff]
line-length = 120


[tool.isort]
profile = "black"

[tool.black]
line-length = 120
target-version = ['py310']
include = '\.pyi?$'

[tool.pylint.MASTER]
load-plugins = ["pylint.extensions.docparams"]

[tool.pylint.messages_control]
max-line-length = 120
disable = [
    "too-few-public-methods",
    "design",
    "duplicate-code",
    "missing-class-docstring",
    "missing-function-docstring",
    "missing-module-docstring",
    "too-many-nested-blocks",
    "unused-argument",
    "fixme",
    "import-outside-toplevel"
]


[tool.flake8]
# This section is just a doc placeholder..see setup.cfg
max-complexity = 10
format = "pylint"
statistics = "True"
max-line-length = 125
# ignore non-PEP8 lints
ignore = ["E203", "W503", "W0511"]

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"
testpaths = ["tests"]


[tool.mypy]
# platform configuration
python_version = "3.9"
platform = "linux"
mypy_path = "stubs"
ignore_missing_imports = true


[build-system]
requires = ["maturin>=1.2,<2.0"]
build-backend = "maturin"

[project]
name = "rusty-logger"
description = 'Super fast logging for python'
requires-python = ">=3.8, <3.13"
authors = [
    {name = 'Steven Forrester', email = 'sjforrester32@gmail.com'}
]
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    'Intended Audience :: Developers',
    'Intended Audience :: Information Technology',
    "Intended Audience :: Science/Research",
    'Operating System :: POSIX :: Linux',
    'Operating System :: Microsoft :: Windows',
    'Operating System :: MacOS',
    'Typing :: Typed',
]
dynamic = [
    'license',
    'readme',
]

[project.urls]
"Homepage" = "https://github.com/thorrester/rusty-logger"
"Source Code" = "https://github.com/thorrester/rusty-logger"
"Issues" = "https://github.com/thorrester/rusty-logger/issues"


[tool.maturin]
python-source = "python"
module-name = "rusty_logger._rusty_logger"
bindings = 'pyo3'
features = ["pyo3/extension-module"]